force-app/main/default/objects/Family_Attendance__c/Family_Attendance__c.object-meta.xml
<CustomObject>
    <description>Used for recording details of families attendance on programs, linked to familiy member attendance, family guest attendance campaign member and campaign</description>
    <label>Family Attendance</label>
    <nameField>
        <displayFormat>FA{00000}</displayFormat>
        <label>Family Attendance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>