force-app/main/default/objects/Family_Attendance__c/fields/Accepted_Members__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Members__c</fullName>
    <label>Accepted Members</label>
    <summaryFilterItems>
        <field>Family_Member_Attendance__c.Attendance__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Family_Member_Attendance__c.Family_Attendance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>