force-app/main/default/objects/Family_Attendance__c/fields/Agree_to_Participate_in_Event_Activities__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Participate_in_Event_Activities__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree to Participate in Event Activities</label>
    <type>Checkbox</type>
</CustomField>