force-app/main/default/objects/Family_Attendance__c/fields/Behavioral_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Expectations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Behavioral Expectations</label>
    <type>Checkbox</type>
</CustomField>