force-app/main/default/objects/Family_Attendance__c/fields/Children_Under_18_Attended__c.field-meta.xml
<CustomField>
    <fullName>Children_Under_18_Attended__c</fullName>
    <label>Children Under 18 Attended</label>
    <summaryFilterItems>
        <field>Family_Member_Attendance__c.Attendance__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Family_Member_Attendance__c.Is_child__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Family_Member_Attendance__c.Family_Attendance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>