force-app/main/default/objects/Family_Attendance__c/fields/DaysSinceJoinedAtEventDate__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceJoinedAtEventDate__c</fullName>
    <formula>Event_Date__c - Family__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula calculates how many days the family has been with us as at the event date of the program.</inlineHelpText>
    <label>DaysSinceJoinedAtEventDate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>