force-app/main/default/objects/Family_Attendance__c/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <description>Reason why families are not interested in attending an event. Differs from cancellation reason which outlines why they were interested but can no longer attend.</description>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date/s.</fullName>
            </value>
            <value>
                <fullName>Venue.</fullName>
            </value>
            <value>
                <fullName>Distance / too far to travel</fullName>
            </value>
            <value>
                <fullName>Ill-health.</fullName>
            </value>
            <value>
                <fullName>In hospital / on treatment.</fullName>
            </value>
            <value>
                <fullName>Sport/club/family/religious commitment.</fullName>
            </value>
            <value>
                <fullName>We don&apos;t need the support right now</fullName>
            </value>
            <value>
                <fullName>Please give our place to another family this time.</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>