force-app/main/default/objects/Family_Attendance__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Family Attendances</relationshipLabel>
    <relationshipName>Family_Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>