force-app/main/default/objects/Family_Attendance__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <formula>text(Event__r.Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EventType</label>
    <type>Text</type>
</CustomField>