force-app/main/default/objects/Family_Attendance__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Family Attendances</relationshipLabel>
    <relationshipName>Family_Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>