force-app/main/default/objects/Family_Attendance__c/fields/Family_Member_On_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Family_Member_On_Treatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Member On Treatment</label>
    <type>Checkbox</type>
</CustomField>