force-app/main/default/objects/Family_Attendance__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <formula>Family__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Family Name</label>
    <type>Text</type>
</CustomField>