force-app/main/default/objects/Family_Attendance__c/fields/Family_Request_To_Attend_Date__c.field-meta.xml
<CustomField>
    <fullName>Family_Request_To_Attend_Date__c</fullName>
    <label>Family Request To Attend Date</label>
    <type>DateTime</type>
</CustomField>