force-app/main/default/objects/Family_Attendance__c/fields/FamilyMemberInterestedCount__c.field-meta.xml
<CustomField>
    <fullName>FamilyMemberInterestedCount__c</fullName>
    <label>FamilyMemberInterestedCount</label>
    <summaryFilterItems>
        <field>Family_Member_Attendance__c.Attendance__c</field>
        <operation>notEqual</operation>
        <value>Invited</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Family_Member_Attendance__c.Attendance__c</field>
        <operation>notEqual</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>Family_Member_Attendance__c.Family_Attendance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>