force-app/main/default/objects/Family_Attendance__c/fields/No_Of_Guests__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Guests__c</fullName>
    <label>No Of Guests</label>
    <summaryForeignKey>Family_Guest_Attendance__c.Family_Attendance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>