force-app/main/default/objects/Family_Attendance__c/fields/Participant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Participant_Notes__c</fullName>
    <label>Participant Notes</label>
    <type>TextArea</type>
</CustomField>