force-app/main/default/objects/Family_Attendance__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>