force-app/main/default/objects/Family_Attendance__c/fields/Registration_Period_Name__c.field-meta.xml
<CustomField>
    <fullName>Registration_Period_Name__c</fullName>
    <formula>Registration_Period__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Period Name</label>
    <type>Text</type>
</CustomField>