force-app/main/default/objects/Family_Attendance__c/validationRules/Changing_Attendance_from_Unsuccessful.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Attendance_from_Unsuccessful</fullName>
    <active>false</active>
    <errorConditionFormula>AND( OR(text(PRIORVALUE(FA_00000__c ))=&apos;Unsuccessful&apos;, text(PRIORVALUE(FA_00000__c ))=&apos;Declined&apos;), 
 text(FA_00000__c) = &apos;Accepted&apos;,Attended_Members__c =0)</errorConditionFormula>
    <errorMessage>You must first edit family member attendances before changing family attendance when accepting an Unsuccessful family.</errorMessage>
</ValidationRule>