force-app/main/default/objects/Family_Attendance__c/validationRules/Registration_Cancellations_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Cancellations_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>text(FA_00000__c) = &apos;Cancelled&apos; &amp;&amp;  Cancellation_Reason__c =&apos;&apos;</errorConditionFormula>
    <errorMessage>Please fill in the cancellation reason for this cancellation.</errorMessage>
</ValidationRule>