force-app/main/default/objects/Family_Attendance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FA_00000__c</columns>
    <columns>Event__c</columns>
    <columns>Family__c</columns>
    <columns>Accepted_Members__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>NCLE1611 FAMILY CAMP</value>
    </filters>
    <label>All</label>
</ListView>