force-app/main/default/objects/Family_Attendance__c/listViews/My_Event.listView-meta.xml
<ListView>
    <fullName>My_Event</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 and 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Accepted_Members__c</columns>
    <columns>FA_00000__c</columns>
    <columns>Attended_Members__c</columns>
    <columns>Pending_Members__c</columns>
    <columns>Request_Members__c</columns>
    <columns>Event__c</columns>
    <columns>Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Registration_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>FA_00000__c</field>
        <operation>notEqual</operation>
        <value>Declined,Unsuccessful,No Show,Cancelled</value>
    </filters>
    <filters>
        <field>Accepted_Members__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Request_Members__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Pending_Members__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Attended_Members__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/1/2016 12:00 AM</value>
    </filters>
    <label>Broken Family Attendances</label>
</ListView>