force-app/main/default/objects/Family_Attendance__c/listViews/SA1704_Middle_Camp.listView-meta.xml
<ListView>
    <fullName>SA1704_Middle_Camp</fullName>
    <columns>NAME</columns>
    <columns>Family__c</columns>
    <columns>Accepted_Members__c</columns>
    <columns>Pending_Members__c</columns>
    <columns>Request_Members__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>equals</operation>
        <value>SQLD1703 Junior Camp</value>
    </filters>
    <filters>
        <field>Accepted_Members__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Pending_Members__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SA1704 Middle Camp</label>
</ListView>